Fix font size on mobile

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -116,7 +116,7 @@ body{
 		line-height:74px;
 		text-shadow:0 2px 5px rgba(0,0,0,0.5);
 		@include touch{
-			font-size: 6rem;
+			font-size: 5rem;
 		}
 		@include from($desktop){
 			font-size: 7rem;
@@ -130,7 +130,7 @@ body{
 			line-height: 50px;
 			padding-top: 1rem;
 			text-align: center;
-			font-size: 2.5rem;
+			font-size: 2.2rem;
 		}
 		@include from($desktop){
 			font-size: 3rem;
